# MetalQuant

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
benchmarks/: compare_results.py  prompts.py  run_baseline.py  run_calibrate.py  run_experiment.py
docs/: ARCHITECTURE.md  DEVLOG.md  ROADMAP.md
scripts/: activate.sh  bootstrap.sh
src/metalquant/: __main__.py  cache.py  cache_fp16outlier.py  cache_quantized.py  cache_turboquant.py  cache_turboquant_v2.py  calibrate.py  cli.py  config.py  diagnose.py  generate.py  hardware.py
tests/: test_cache_factory.py  test_cli.py  test_config.py  test_diagnose.py  test_generate.py  test_hardware.py
